add logo social plugin

--- a/astrology/src/main/resources/static/css/layout.css
+++ b/astrology/src/main/resources/static/css/layout.css
@@ -725,6 +725,7 @@ ul.footer-social-icons li {
 	-ms-border-radius: 5px;
 	-o-border-radius: 5px;
 	box-sizing: border-box;
+	cursor:pointer;
 }
 
 .footer-top input[type="submit"]:hover {
