--- a/astrology/src/main/resources/static/css/layout.css
+++ b/astrology/src/main/resources/static/css/layout.css
@@ -27,7 +27,7 @@ input[type="button"], input[type="submit"], .contact-form input[type="submit"]
 	-ms-transition: 0.5s all;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h5, h6 {
 	margin: 0;
 }
 
@@ -42,10 +42,6 @@ ul {
 
 label {
 	margin: 0;
-}
-
-img {
-	width: 100%;
 }
 
 /* header */
@@ -280,8 +276,8 @@ a.button-style:hover {
 }
 
 .services {
-	background: #222;
-	background: url(../images/service.jpg) no-repeat 0px 0px;
+	background: white;
+	background-image: linear-gradient(to bottom, rgba(192,192,192,0.2), rgba(192,192,192,0.2)),url(../images/galaxy.png);
 	background-size: cover;
 	background-attachment: fixed;
 }
@@ -324,18 +320,20 @@ a.button-style:hover {
 
 .ser_grid1 h3 {
 	font-size: 24px;
-	color: #ddd;
+	color: aliceblue;
 	letter-spacing: 1px;
 	text-transform: capitalize;
 	margin: .5em 0;
+	font-weight: bold;
 }
 
 .ser_grid1 p {
 	font-size: 15.5px;
 	letter-spacing: 0.5px;
 	line-height: 28px;
-	color: #999;
+	color: yellow;
 	margin: 1em 0;
+	font-weight: bold;
 }
 /*-- // services section --*/
 
@@ -833,7 +831,7 @@ ul.footer-social-icons li {
 	height: 40px;
 	border: none;
 	text-indent: 100%;
-	background: url(../images/arr.png) no-repeat 0px 0px;
+	background: url(../images/up-arr.png) no-repeat 0px 0px;
 }
 
 #toTopHover {
