--- a/astrology/src/main/resources/static/css/layout.css
+++ b/astrology/src/main/resources/static/css/layout.css
@@ -18,7 +18,7 @@ a:hover {
 	text-decoration: none;
 }
 
-input[type="button"], input[type="submit"], .contact-form input[type="submit"]
+input[type="button"], input[type="submit"]
 	{
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
@@ -85,162 +85,14 @@ header h1 a span {
 	letter-spacing: 1px;
 }
 
-.dropdown-item {
-	font-weight: 600;
-	text-transform: capitalize;
-	color: #333;
-	letter-spacing: 1px;
-}
-
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus,
 	.navbar-light .navbar-nav .show>.nav-link, .navbar-light .navbar-nav .active>.nav-link,
-	.navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active,
-	.dropdown-item:hover {
+	.navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
 	color: blueviolet;
 	background: #fff;
 	border-radius: 5px;
 }
-
-.w3ls-btn, .w3ls-btn1:hover {
-	letter-spacing: 1px;
-	font-size: 15px;
-	background: #e2b13c;
-	border-color: #e2b13c;
-}
-
-.w3ls-btn:hover, .w3ls-btn1 {
-	background: #333;
-	border-color: #333;
-	letter-spacing: 1px;
-	font-size: 15px;
-}
 /*-- //header --*/
-
-/*-- banner-slider --*/
-.w3layouts-banner-top {
-	background: url(../images/banner.jpg) no-repeat 0px 0px;
-	background-size: cover;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	-moz-background-size: cover;
-	min-height: 850px;
-}
-.bs-slider-overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-.w3l-slide-text {
-	margin-top: 13em;
-}
-
-.w3l-slide-text h1, .w3l-slide-text h2, .w3l-slide-text h3 {
-	color: #fff;
-	font-size: 55px;
-	font-weight: 600;
-	letter-spacing: 3px;
-	text-transform: uppercase;
-	text-shadow: 2px 2px 3px #292828;
-	-webkit-animation-delay: 0.7s;
-	animation-delay: 0.7s;
-}
-
-.w3l-slide-text p.heading_bottom {
-	border: none;
-	color: #eee;
-	font-size: 15px;
-	letter-spacing: 1px;
-	line-height: 28px;
-	width: 70%;
-	margin: 0 auto;
-	text-transform: lowercase;
-}
-
-a.button-style {
-	color: #fff;
-	letter-spacing: 2px;
-	text-shadow: 1px 1px 4.8px rgba(3, 3, 3, .3);
-	-webkit-animation-delay: 1.1s;
-	animation-delay: 1.1s;
-	font-size: 15px;
-	border: 1px solid #e2b13c;
-	text-transform: capitalize;
-	padding: 10px 30px;
-	background: #e2b13c;
-}
-
-a.button-style1 {
-	color: #fff;
-	letter-spacing: 2px;
-	text-shadow: 1px 1px 4.8px rgba(3, 3, 3, .3);
-	-webkit-animation-delay: 1.1s;
-	animation-delay: 1.1s;
-	font-size: 15px;
-	border: 1px solid #fff;
-	text-transform: capitalize;
-	padding: 10px 30px;
-}
-
-a.button-style1:hover {
-	background: #e2b13c;
-	border: 1px solid #e2b13c;
-}
-
-a.button-style:hover {
-	background: transparent;
-	border: 1px solid #fff;
-}
-/*-- //banner-slider --*/
-.text-align {
-	text-align: right;
-}
-
-/*-- about section --*/
-
-.resp-tabs-list li h3 {
-	font-size: 18px;
-	letter-spacing: 1px;
-	font-weight: 600;
-	color: #fff;
-	background: #e2b13c;
-	border: 1px solid #e2b13c;
-	padding: 10px 20px;
-	transition: 0.5s all;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-ms-transition: 0.5s all;
-	-o-transition: 0.5s all;
-}
-
-.resp-tabs-list li h3:hover {
-	background: #333;
-	border: 1px solid #333;
-	transition: 0.5s all;
-	-webkit-transition: 0.5s all;
-	-moz-transition: 0.5s all;
-	-ms-transition: 0.5s all;
-	-o-transition: 0.5s all;
-}
-
-.tab1 h4, .tab2 h4, .tab3 h4 {
-	font-size: 20px;
-	letter-spacing: 1px;
-	line-height: 30px;
-	margin: 15px 0;
-	color: #222;
-	display: inline-block;
-}
-
-.tab1 p, .tab2 p, .tab3 p {
-	font-size: 16px;
-	letter-spacing: 0px;
-	line-height: 28px;
-	color: #666;
-}
-/*-- //about section --*/
 
 /*-- services section --*/
 .service_grids {
@@ -249,7 +101,7 @@ a.button-style:hover {
 
 .services {
 	background: white;
-	background-image: linear-gradient(to bottom, rgba(192,192,192,0.2), rgba(192,192,192,0.2)),url(../images/galaxy.png);
+	background-image: linear-gradient(to bottom, rgba(192,192,192,0.2), rgba(192,192,192,0.2)),url(../images/service.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 }
@@ -259,35 +111,20 @@ a.button-style:hover {
 	margin-bottom: 0.5em;
 }
 
-.ser_grid1 a {
-	font-size: 15px;
-	color: #999;
-	letter-spacing: 0px;
-}
-
-.icon1 span.fab, .icon1 a {
+.icon1 span.fab {
 	color: #0099e5;
 }
 
-.icon2 span.fab, .icon2 a {
+.icon2 span.fab {
 	color: #ff4c4c;
 }
 
-.icon3 span.fab, .icon3 a {
+.icon3 span.fab {
 	color: #34bf49;
 }
 
 .icon4 span.fab {
 	color: #7d3f98;
-}
-
-.ser_grid1 a {
-	color: #ddd;
-	letter-spacing: 3px;
-}
-
-.ser_grid1 a:hover {
-	color: #999;
 }
 
 .ser_grid1 h3 {
@@ -309,11 +146,7 @@ a.button-style:hover {
 }
 /*-- // services section --*/
 
-/*-- Team section --*/
-.team_grids, .about_grids, .test-grids, .contact-grids, .stats_test {
-	padding: 0 2em;
-}
-
+/*-- introduce section --*/
 h1.heading, h2.heading, h3.heading {
 	font-size: 50px;
 	font-weight: 900;
@@ -321,59 +154,22 @@ h1.heading, h2.heading, h3.heading {
 	color: #444;
 }
 
-.w3l_team_grid h4 {
-	font-size: 1.3em;
-	font-weight: 600;
-	color: #e2b13c;
-	letter-spacing: 1px;
-}
-
-.w3l_team_grid p:after {
-	position: absolute;
-	content: '';
-	width: 16%;
-	height: 2px;
-	background: #333;
-	bottom: -40%;
-	left: 42%;
-}
-
-.w3l_team_grid p {
-	font-size: 1em;
-	letter-spacing: 1px;
-	color: #151515;
-	position: relative;
-}
-
-.team_grid1 h4 {
+.introduce h4 {
 	font-size: 28px;
 	color: #333;
-	text-transform: capitalize;
 	letter-spacing: 2px;
 }
 
-.team_grid1 p {
+.introduce p {
 	font-size: 15px;
 	letter-spacing: 1px;
 	line-height: 28px;
 	margin: 1em 0 0;
 	color: #666;
 }
+/*-- // introduce section --*/
 
-.team_grid1 p.second_para {
-	font-size: 16px;
-	letter-spacing: 0px;
-	line-height: 28px;
-	margin: 1em 0;
-	color: #666;
-}
-
-.w3l_team_grid {
-	text-align: center;
-}
-/*-- // Team section --*/
-
-/*-- gallery --*/
+/*-- shop section--*/
 .agile_gallery_grids {
 	padding: 0 2em;
 }
@@ -387,99 +183,6 @@ h1.heading, h2.heading, h3.heading {
 .demo>li img {
 	width: 240px;
 	cursor: pointer;
-}
-/*jquery.picEyes*/
-.picshade {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100% !important;
-	background-color: #000;
-	opacity: 0.91;
-	filter: alpha(opacity = 91);
-	z-index: 99;
-	display: none;
-}
-
-.pictures_eyes_close {
-	position: fixed;
-	top: 30px;
-	right: 30px;
-	display: inline-block;
-	width: 30px;
-	height: 30px;
-	background: url(../images/close.png) no-repeat;
-	z-index: 100;
-	display: none;
-}
-
-.pictures_eyes {
-	position: fixed;
-	width: 100%;
-	left: 0;
-	top: 0;
-	z-index: 199;
-	display: none;
-}
-
-.pictures_eyes_in {
-	position: relative;
-	text-align: center;
-}
-
-.pictures_eyes_in img {
-	max-height: 500px;
-	max-width: 700px;
-}
-
-.pictures_eyes_in .prev, .pictures_eyes_in .next {
-	position: absolute;
-	top: 50%;
-	width: 51px;
-	height: 51px;
-	cursor: pointer;
-}
-
-.pictures_eyes_in .prev {
-	left: 35px;
-	background: url(../images/left1.png) no-repeat;
-}
-
-.pictures_eyes_in .next {
-	right: 35px;
-	background: url(../images/right1.png) no-repeat;
-}
-
-.pictures_eyes_indicators {
-	position: fixed;
-	left: 0;
-	bottom: 15px;
-	width: 100%;
-	text-align: center;
-	z-index: 299;
-}
-
-.pictures_eyes_indicators a {
-	display: inline-block;
-	width: 50px;
-	height: 50px;
-	margin: 6px 3px 0 3px;
-	border: 1px solid #ddd;
-	border-radius: 10px;
-	box-shadow: 0 0 2px #000;
-	filter: alpha(opacity = 50);
-	opacity: 0.5;
-	overflow: hidden;
-}
-
-.pictures_eyes_indicators img {
-	height: 50px;
-}
-
-.pictures_eyes_indicators .current {
-	filter: alpha(opacity = 100);
-	opacity: 1;
 }
 
 .gallery-grid1 {
@@ -545,117 +248,55 @@ h1.heading, h2.heading, h3.heading {
 	letter-spacing: 1px;
 }
 
-.pictures_eyes_in {
-	position: relative;
-	text-align: center;
-}
-/*-- //gallery --*/
+/*-- //shop section --*/
 
 /*-- footer --*/
-.footer-nav li {
-	list-style-type: none;
-	display: inline-block;
-	margin: 0px 1em;
-	border-bottom: 2px solid rgba(226, 222, 222, 0);
-}
-
-ul.footer-nav li a {
-	color: #ddd;
-	font-size: 1.1em;
-	display: inline-block;
-}
-
-ul.footer-nav li a:hover {
-	color: #fff;
-}
-
-.f1 p {
-	font-size: 16px;
-	color: #777;
-	line-height: 29px;
-}
-
-ul.footer-nav li a.active {
-	color: #d66047;
-	font-weight: 600;
-}
-
 .copyright {
 	border: 1px solid #404040;
 	border-width: 1px 0;
 }
 
-.w3_agile-footer1.f1 h2 a {
-	color: #fff;
-	font-size: 1em;
-	text-transform: uppercase;
-}
-
-.w3_agile-footer1 h5.f1 {
-	margin: 1.1em 0 0.5em;
-}
-
-.w3_agile-footer1 h5 {
-	text-transform: uppercase;
+.agile-footer1 h5 {
 	font-size: 1.3em;
 	color: #ccc;
 	letter-spacing: 1px;
 	font-weight: 600;
 }
 
-ul.w3ls-footer-bottom-list li, p.tweet-p1, p.tweet-p2 {
+ul.footer-bottom-list li {
 	list-style-type: none;
 	margin: 7px 0;
 	color: #888;
 	letter-spacing: .5px;
 }
 
-p.tweet-p1 a {
-	color: #555;
-}
-
-ul.w3ls-footer-bottom-list li span {
+ul.footer-bottom-list li span {
 	padding-left: 28px;
 }
 
-ul.w3ls-footer-bottom-list li span.fas, ul.w3ls-footer-bottom-list li span.fab,
-	ul.tweet-agile span.fab {
+ul.footer-bottom-list li span.fas, ul.footer-bottom-list li span.fab {
 	width: 25px;
 	color: #00b833;
 	padding-left: 0;
 }
 
-ul.w3ls-footer-bottom-list li a, ul.footer-social-icons li a {
+ul.footer-bottom-list li a {
 	color: #888;
 	font-size: 16px;
 	outline: none;
 }
 
-ul.w3ls-footer-bottom-list li a:hover, ul.footer-social-icons li a:hover,
-	p.tweet-p1 a:hover {
+ul.footer-bottom-list li a:hover {
 	color: blueviolet;
 }
 
-ul.footer-social-icons li {
-	list-style-type: none;
-	margin: 0.5em 0;
-}
-
-.agileits_w3layouts-copyright p a {
-	color: #ccc;
-}
-
-.agileits_w3layouts-copyright p a:hover {
-	color: #e2b13c;
-}
-
-.agileits_w3layouts-copyright p {
+.copyright p {
 	color: #888;
 	letter-spacing: 1px;
 	font-size: 15px;
 }
 
-.agile-footer.w3ls-section, .copyright, .footer-top {
+.agile-footer, .copyright, .footer-top {
 	background: #222;
 }
 
@@ -702,94 +343,9 @@ ul.footer-social-icons li {
 	background: #fff;
 	color: #00BFFF;
 }
-/*--social-icons--*/
-
-/** Button Code **/
-.icon-social h3 {
-	margin: 0;
-	display: inline-block;
-	color: #ccc;
-	margin-right: 20px;
-	font-size: 24px;
-	letter-spacing: 1px;
-	vertical-align: middle;
-	text-transform: capitalize;
-}
-
-.social-icon {
-	text-align: center;
-}
-
-.button-footr {
-	width: 46px;
-	height: 46px;
-	line-height: 42px;
-	font-size: 13px;
-	display: block;
-	position: relative;
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
-	border: 2px dotted #a2a2a2;
-	text-align: center;
-	display: inline-block;
-	vertical-align: middle;
-	position: relative;
-	z-index: 10;
-	color: #aaa;
-}
-
-.button-footr:hover {
-	color: #fff;
-}
-
-.button-footr:after {
-	position: absolute !important;
-	content: "";
-	width: 36px;
-	height: 36px;
-	display: block;
-	position: relative;
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
-	right: 3px;
-	top: 3px;
-	background-color: #e2b13c;
-	visibility: hidden;
-	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-	opacity: 0;
-	-moz-transition: all 0.4s ease;
-	-o-transition: all 0.4s ease;
-	-webkit-transition: all 0.4s ease;
-	transition: all 0.4s ease;
-	opacity: 1\9;
-	visibility: visible\9;
-	display: none\9;
-	-moz-transform: scale(0.5, 0.5);
-	-ms-transform: scale(0.5, 0.5);
-	-webkit-transform: scale(0.5, 0.5);
-	transform: scale(0.5, 0.5);
-	z-index: -1;
-	-moz-transition: all 0.2s ease;
-	-o-transition: all 0.2s ease;
-	-webkit-transition: all 0.2s ease;
-	transition: all 0.2s ease;
-}
-
-.button-footr:hover:after {
-	visibility: visible;
-	filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-	opacity: 1;
-	display: block\9;
-	-moz-transform: scale(1, 1);
-	-ms-transform: scale(1, 1);
-	-webkit-transform: scale(1, 1);
-	transform: scale(1, 1);
-}
-
-/*--//social-icons--*/
 /*-- //footer --*/
+
+
 /*-- to-top --*/
 #toTop {
 	display: none;
@@ -820,14 +376,8 @@ ul.footer-social-icons li {
 
 /*-- Responsive Design --*/
 @media ( max-width : 1440px) {
-	.tab1 h4, .tab2 h4, .tab3 h4 {
-		font-size: 19px;
-	}
 	.demo>li img {
 		width: 215px;
-	}
-	.w3layouts-banner-top {
-		min-height: 730px;
 	}
 }
 
@@ -844,15 +394,6 @@ ul.footer-social-icons li {
 }
 
 @media ( max-width : 1280px) {
-	.w3layouts-banner-top {
-		min-height: 600px;
-	}
-	.w3l-slide-text {
-		margin-top: 10em;
-	}
-	.w3l-slide-text h1, .w3l-slide-text h2, .w3l-slide-text h3 {
-		font-size: 50px;
-	}
 	.blog-posts h4 {
 		font-size: 19px;
 	}
@@ -871,11 +412,8 @@ ul.footer-social-icons li {
 	.w3_agile-footer1 h5 {
 		font-size: 1.1em;
 	}
-	ul.w3ls-footer-bottom-list li span {
+	ul.footer-bottom-list li span {
 		padding-left: 0;
-	}
-	.partner-grids i.fab {
-		font-size: 60px;
 	}
 	h1.heading, h2.heading, h3.heading {
 		letter-spacing: 3px;
@@ -891,22 +429,6 @@ ul.footer-social-icons li {
 }
 
 @media ( max-width : 1024px) {
-	.w3l-slide-text h1, .w3l-slide-text h2, .w3l-slide-text h3 {
-		font-size: 45px;
-	}
-	.w3layouts-banner-top {
-		min-height: 570px;
-	}
-	.resp-tabs-list li h3 {
-		font-size: 16px;
-		padding: 10px 17px;
-	}
-	.stats_left i {
-		font-size: 2.3em;
-	}
-	.stats_left p {
-		font-size: 2.3em;
-	}
 	.demo>li img {
 		width: 195px;
 	}
@@ -922,18 +444,6 @@ ul.footer-social-icons li {
 		letter-spacing: 0px;
 		margin: .5em 0;
 	}
-	.w3l_team_grid h4 {
-		letter-spacing: 0px;
-	}
-	.w3l_team_grid {
-		text-align: center;
-		padding: 0 5px;
-	}
-	.test-image {
-		width: 30%;
-		padding: 0 25px;
-		float: left;
-	}
 }
 
 @media ( max-width : 991px) {
@@ -946,98 +456,26 @@ ul.footer-social-icons li {
 		font-size: 1rem;
 		border-radius: 0rem;
 	}
-	.navbar-nav .dropdown-menu {
-		text-align: center;
-	}
-	.w3l-slide-text h1, .w3l-slide-text h2, .w3l-slide-text h3 {
-		font-size: 42px;
-		letter-spacing: 2px;
-	}
 	.demo>li img {
 		width: 215px;
-	}
-	.buttons {
-		text-align: center;
-		margin-top: 1em;
 	}
 }
 
 @media ( max-width : 800px) {
-	.w3l-slide-text h1, .w3l-slide-text h2, .w3l-slide-text h3 {
-		font-size: 38px;
-		letter-spacing: 2px;
-	}
-	.w3layouts-banner-top {
-		min-height: 540px;
-	}
-	.w3l-slide-text {
-		margin-top: 8em;
-	}
 	.demo>li img {
 		width: 225px;
-	}
-	.test-review p {
-		font-size: 15px;
 	}
 }
 
 @media ( max-width : 768px) {
-	.partner-grids i.fab {
-		font-size: 50px;
-	}
-	.resp-tabs-container h3 {
-		font-size: 20px;
-		font-weight: 600;
-		letter-spacing: 1px;
-	}
-	.resp-tab-content-active {
-		padding: 1em 3em;
-	}
 	.demo>li img {
 		width: 215px;
-	}
-	.gallery-bottom h2 {
-		font-size: 26px;
-		letter-spacing: 1px;
 	}
 }
 
 @media ( max-width : 736px) {
-	.f1, .f2, .f3 {
-		padding: 0 5px;
-	}
-	.w3l-slide-text h1, .w3l-slide-text h2, .w3l-slide-text h3 {
-		font-size: 30px;
-		letter-spacing: 1px;
-	}
-	.w3l-slide-text p.heading_bottom {
-		width: 100%;
-	}
-	.w3layouts-banner-top {
-		min-height: 500px;
-	}
-	.w3l-slide-text {
-		margin-top: 7em;
-	}
-	.inner-page-banner {
-		min-height: 200px;
-	}
-	.stats_left h4 {
-		font-size: 1em;
-		letter-spacing: 1px;
-	}
-	.text-align {
-		text-align: left;
-	}
 	.demo>li img {
 		width: 203px;
-	}
-	.map {
-		padding: 0;
-	}
-	.map iframe {
-		padding: 20px;
-		height: 380px;
 	}
 }
 
@@ -1061,9 +499,6 @@ ul.footer-social-icons li {
 	.demo>li img {
 		width: 240px;
 	}
-	.map iframe {
-		height: 320px;
-	}
 }
 
 @media ( max-width : 568px) {
@@ -1073,27 +508,6 @@ ul.footer-social-icons li {
 }
 
 @media ( max-width : 480px) {
-	.w3l-slide-text {
-		margin-top: 6em;
-		padding: 0 2em;
-	}
-	.w3l-slide-text h1, .w3l-slide-text h2, .w3l-slide-text h3 {
-		font-size: 28px;
-		letter-spacing: 0px;
-	}
-	.resp-tab-content-active {
-		padding: 1em 1em;
-	}
-	.inner-page-banner {
-		min-height: 150px;
-	}
-	.gallery-bottom h2 {
-		font-size: 24px;
-		letter-spacing: 1px;
-	}
-	.gallery-bottom p {
-		font-size: 15px;
-	}
 	.demo>li img {
 		width: 180px;
 	}
@@ -1101,57 +515,21 @@ ul.footer-social-icons li {
 		letter-spacing: 2px;
 		font-size: 40px;
 	}
-	.test-image {
-		width: 60%;
-		padding: 0px;
-		float: none;
-		margin: 0 auto;
-	}
-	.test-review {
-		width: 100%;
-		float: none;
-	}
 }
 
 @media ( max-width : 414px) {
-	.icon-social h3 {
-		display: block;
-		margin-bottom: 15px;
-		margin-right: 0px;
-		font-size: 20px;
-	}
 	.footer-top input[type="email"] {
 		width: 64%;
 	}
 	.footer-top input[type="submit"] {
 		width: 36%;
 	}
-	.w3l-slide-text {
-		margin-top: 3em;
-		padding: 0 2em;
-	}
 	.demo>li img {
 		width: 100%;
-	}
-	.errorcontent h2 {
-		font-size: 80px;
-	}
-	.test-review h5 {
-		letter-spacing: 1px;
-		font-size: 22px;
 	}
 }
 
 @media ( max-width : 384px) {
-	a.button-style, a.button-style1 {
-		padding: 10px 20px;
-	}
-	.team_grids, .about_grids, .test-grids, .contact-grids, .stats_test {
-		padding: 0 1em;
-	}
-	.inner-page-banner {
-		min-height: 100px;
-	}
 	h1.heading, h2.heading, h3.heading {
 		letter-spacing: 1px;
 		font-size: 35px;
@@ -1166,9 +544,6 @@ ul.footer-social-icons li {
 		font-size: 26px;
 		margin-right: 5px;
 	}
-	.errorcontent h2 {
-		font-size: 60px;
-	}
 }
 
 @media ( max-width : 320px) {
@@ -1180,23 +555,5 @@ ul.footer-social-icons li {
 	}
 	.navbar {
 		padding: 1rem 0.5rem;
-	}
-	.contact-form h4.heading {
-		font-size: 22px;
-	}
-	.w3l_team_grid h4 {
-		font-size: 1.2em;
-	}
-	.w3l_team_grid p {
-		letter-spacing: 0px;
-	}
-	.test-review p {
-		font-size: 15px;
-		padding-left: 20px;
-		letter-spacing: 1px;
-	}
-	.w3l-slide-text {
-		margin-top: 2em;
-		padding: 0 0em;
 	}
 }
