--- a/astrology/src/main/resources/static/css/layout.css
+++ b/astrology/src/main/resources/static/css/layout.css
@@ -287,7 +287,7 @@ ul.footer-bottom-list li a:hover {
 	background: #222;
 }
 
-.footer-top input[type="email"] {
+.footer-top input[type="text"] {
 	outline: none;
 	width: 100%;
 	padding: 13px 20px;
@@ -505,7 +505,7 @@ ul.footer-bottom-list li a:hover {
 }
 
 @media ( max-width : 414px) {
-	.footer-top input[type="email"] {
+	.footer-top input[type="text"] {
 		width: 64%;
 	}
 	.footer-top input[type="submit"] {
@@ -534,7 +534,7 @@ ul.footer-bottom-list li a:hover {
 }
 
 @media ( max-width : 320px) {
-	.footer-top input[type="email"] {
+	.footer-top input[type="text"] {
 		width: 100%;
 	}
 	.footer-top input[type="submit"] {
