add article detail

--- a/astrology/src/main/resources/static/css/layout.css
+++ b/astrology/src/main/resources/static/css/layout.css
@@ -3,7 +3,7 @@ body {
 	margin: 0;
 	background: #fff;
 	position: relative;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: Microsoft JhengHei, sans-serif;
 }
 
 body a {
